--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
             --image ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest \
             --target-port 8003 \
             --ingress 'external' \
+            --dapr enabled \
             --dapr-app-id user-service \
             --dapr-app-port 8003 \
             --env-vars \
@@ -129,6 +130,7 @@ jobs:
             --image ${{ secrets.DOCKER_HUB_USERNAME }}/orderservice:latest \
             --target-port 8005 \
             --ingress 'external' \
+            --dapr enabled \
             --dapr-app-id order-service \
             --dapr-app-port 8005 \
             --env-vars \
@@ -146,14 +148,6 @@ jobs:
             --name service3 \
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.USER_SERVICE_URL }} ${{ secrets.INVENTORY_SERVICE_URL }} 
-
-      - name: Deploy Dapr Kafka Component
-        run: |
-          az containerapp dapr component create \
-            --name order-service \
-            --resource-group myresourcegroup \
-            --environment mycontainerappenv \
-            --component ./components/pubsub.yaml
               
       # Deploy the inventory service to Azure Container Apps
       - name: Deploy Inventory Service to Azure Container Apps
@@ -189,6 +183,7 @@ jobs:
             --image ${{ secrets.DOCKER_HUB_USERNAME }}/notificationservice:latest \
             --target-port 8007 \
             --ingress 'external' \
+            --dapr enabled \
             --dapr-app-id notification-service \
             --dapr-app-port 8007 \
             --env-vars \
@@ -212,14 +207,6 @@ jobs:
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.USER_SERVICE_URL }} ${{ secrets.PRODUCT_SERVICE_URL }} ${{ secrets.ORDER_SERVICE_URL }} ${{ secrets.NOTIFICATION_SERVICE_URL }}
             
-
-      - name: Deploy Dapr Subscription Configuration for Notification Service
-        run: |
-          az containerapp dapr component create \
-            --name notification-subscriptions \
-            --resource-group myresourcegroup \
-            --environment mycontainerappenv \
-            --component ./components/notification-subscriptions.yml
       # Deploy the payment service to Azure Container Apps
       # - name: Deploy Payment Service to Azure Container Apps
       #   run: |
