--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -12,8 +12,6 @@ RUN apt-get update && apt-get install -y \
     protobuf-compiler \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# RUN wget -q https://raw.githubusercontent.com/dapr/cli/master/install/install.sh -O - | /bin/bash
-
 # Set the environment variable for dapr
 ENV PATH="/root/.dapr/bin:${PATH}"
 
@@ -28,7 +26,6 @@ RUN which dapr
 
 # Copy only the necessary files to install dependencies
 COPY pyproject.toml poetry.lock /microservice1/
-
 
 # Install poetry
 RUN pip install poetry 
@@ -48,4 +45,4 @@ COPY ./components /dapr/components
 EXPOSE 8003
 
 # Define the command to run the application
-CMD ["dapr", "run", "--app-id", "user-service", "--app-port", "8003", "--dapr-http-port", "3500", "--resources-path", "./components", "--", "poetry", "run", "uvicorn", "service1.main:app", "--host", "0.0.0.0", "--port", "8003"]
+CMD ["dapr", "run", "--app-id", "user-service", "--app-port", "3003", "--dapr-http-port", "3500", "--resources-path", "./components", "--", "poetry", "run", "uvicorn", "service1.main:app", "--host", "0.0.0.0", "--port", "8003", "--reload"]
