--- a/compose.yaml
+++ b/compose.yaml
@@ -105,6 +105,26 @@ services:
     depends_on:
       - postgres_db
       - broker
+      - redis
+      - dapr_sidecar
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+  dapr_sidecar:
+    image: daprio/daprd:latest
+    command: ["./daprd", "-app-id", "user-service", "-app-port", "3003", "-dapr-http-port", "3500", "-dapr-grpc-port", "50006"]
+    ports:
+      - "3500:3500"
+      - "50006:50006"
+    volumes:
+      - ./user-service/components:/dapr/components
+    depends_on:
+      - redis
 
   service2:
     image: kamilzafar/productservice:latest
@@ -130,6 +150,18 @@ services:
     depends_on:
       - postgres_db
       - broker
+      - dapr_order_sidecar
+
+  dapr_order_sidecar:
+    image: daprio/daprd:latest
+    command: ["./daprd", "-app-id", "order-service", "-app-port", "3005", "-dapr-http-port", "3501", "-dapr-grpc-port", "50007"]
+    ports:
+      - "3501:3501"
+      - "50007:50007"
+    volumes:
+      - ./order-service/components:/dapr/components
+    depends_on:
+      - redis
 
   service4:
     image: kamilzafar/inventoryservice:latest
@@ -155,12 +187,18 @@ services:
     depends_on:
       - postgres_db
       - broker
-    command: >
-      dapr run --app-id notification-service 
-          --app-port 8007 
-          --dapr-http-port 3501 
-          --components-path /component
-          -- python /microservice5/service5/main.py
+      - dapr_notification_sidecar
+
+  dapr_notification_sidecar:
+    image: daprio/daprd:latest
+    command: ["./daprd", "-app-id", "notification-service", "-app-port", "3007", "-dapr-http-port", "3502", "-dapr-grpc-port", "50008"]
+    ports:
+      - "3502:3502"
+      - "50008:50008"
+    volumes:
+      - ./notification-service/components:/dapr/components
+    depends_on:
+      - redis
 
   service6:
     image: kamilzafar/paymentservice:latest
@@ -175,32 +213,6 @@ services:
       - postgres_db
       - broker
 
-  placement:
-    image: "daprio/dapr:latest"
-    command: ["./placement"]
-    ports:
-      - "50005:50005"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:50005/v1.0/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    restart: on-failure
-
-  nodeapp-dapr:
-    image: "daprio/daprd:edge"
-    command: ["daprd",
-     "-app-id", "user_service",
-     "-app-port", "3000",
-     "-placement-host-address", "placement:5000",
-     "-dapr-grpc-port", "50002",
-     "-components-path", "/components"]
-    volumes:
-        - "./components/:/components"
-    depends_on:
-      - service1
-      - placement
-
   postgres_db:
     image: postgres:latest # Use the official PostgreSQL image
     restart: always
@@ -213,28 +225,6 @@ services:
       - "5433:5432"
     volumes:
       - postgres_db:/var/lib/postgresql/data
-
-  # broker:
-  #   image: apache/kafka:3.7.0
-  #   hostname: broker
-  #   container_name: broker
-  #   ports:
-  #     - "9092:9092"
-  #   environment:
-  #     KAFKA_NODE_ID: 1
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
-  #     KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT_HOST://localhost:9092,PLAINTEXT://broker:19092"
-  #     KAFKA_PROCESS_ROLES: "broker,controller"
-  #     KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:29093"
-  #     KAFKA_LISTENERS: "CONTROLLER://:29093,PLAINTEXT_HOST://:9092,PLAINTEXT://:19092"
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
-  #     KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-  #     CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-  #     KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
 
   broker:
     image: apache/kafka:3.7.0
@@ -308,6 +298,7 @@ secrets:
 
 volumes:
   kong_data: {}
+  redis-data: {}
   kong_prefix_vol:
     driver_opts:
       type: tmpfs
