--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -6,12 +6,9 @@ WORKDIR /microservice5
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN apt-get update && apt-get install -y \
     build-essential \
     protobuf-compiler \
+    wget \
     libpq-dev \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -33,8 +30,10 @@ RUN poetry install --no-dev --no-root
 # Copy the application code
 COPY . /microservice5/
 
+COPY ./components /dapr/components
+
 # Expose the port the application runs on
 EXPOSE 8007
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service5.main:app", "--host", "0.0.0.0", "--port", "8007"]
+CMD ["dapr", "run", "--app-id", "notification-service", "--app-port", "3007", "--dapr-http-port", "3502", "--resources-path", "./components", "--", "poetry", "run", "uvicorn", "service5.main:app", "--host", "0.0.0.0", "--port", "8007", "--reload"]
