--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -8,8 +8,21 @@ WORKDIR /microservice3
 RUN apt-get update && apt-get install -y \
 build-essential \
 protobuf-compiler \
+wget \
 libpq-dev \
 && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Set the environment variable for dapr
+ENV PATH="/root/.dapr/bin:${PATH}"
+
+# Install dapr
+RUN wget -q https://raw.githubusercontent.com/dapr/cli/master/install/install.sh -O - | /bin/bash
+
+# Initialize dapr
+RUN dapr init --slim
+
+# Verify dapr installation
+RUN which dapr
 
 # Copy only the necessary files to install dependencies
 COPY pyproject.toml poetry.lock /microservice3/
@@ -32,4 +45,4 @@ COPY ./components /dapr/components
 EXPOSE 8005
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service3.main:app", "--host", "0.0.0.0", "--port", "8005"]
+CMD ["dapr", "run", "--app-id", "order-service", "--app-port", "3005", "--dapr-http-port", "3501", "--resources-path", "./components", "--", "poetry", "run", "uvicorn", "service3.main:app", "--host", "0.0.0.0", "--port", "8005", "--reload"]
