--- a/order-service/components/pubsub.yaml
+++ b/order-service/components/pubsub.yaml
@@ -17,9 +17,4 @@ spec:
   - name: disableTls
     value: "true"  # Disable TLS if not using SSL
 scopes:
-- service1
-- service2
-- service3
-- service4
-- service5
-- service6
+- order-service
