--- a/notification-service/pyproject.toml
+++ b/notification-service/pyproject.toml
@@ -15,6 +15,7 @@ aiokafka = "^0.10.0"
 protobuf = "^5.27.2"
 fastapi-mail = "^1.4.1"
 psycopg2 = "^2.9.9"
+dapr = "^1.14.0"
 
 [build-system]
 requires = ["poetry-core"]
