--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -29,4 +29,4 @@ COPY . /microservice2/
 EXPOSE 8004
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service2.main:app", "--host", "0.0.0.0", "--port", "8004"]
+CMD ["poetry", "run", "uvicorn", "service2.main:app", "--host", "0.0.0.0", "--port", "8004", "--reload"]
