--- a/payment-service/pyproject.toml
+++ b/payment-service/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -11,6 +12,7 @@ fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sqlmodel = "^0.0.19"
 confluent-kafka = "^2.4.0"
+stripe = "^10.8.0"
 
 
 [build-system]
