refactor: Update Docker build paths and SMTP credentials
This code change updates the Docker build paths for the services and fixes the SMTP credentials in the deploy.yml file. The Docker build paths have been modified to use the current directory instead of relative paths, ensuring that the Docker images are built correctly. Additionally, the SMTP credentials have been fixed by updating the SMTP_PASSWORD secret to use the correct value. This resolves an issue where the Docker build commands were failing due to incorrect paths and SMTP credentials.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -173,7 +173,6 @@ jobs:
             --target-port 8007 \
             --ingress 'external' \
             --env-vars \
-              INVENTORY_SERVICE_DATABASE_URL=${{ secrets.INVENTORY_SERVICE_DATABASE_URL }} \
               NOTIFICATION_SERVICE_KAFKA_CONSUMER_TOPIC=${{ secrets.NOTIFICATION_SERVICE_KAFKA_CONSUMER_TOPIC }} \
               NOTIFICATION_SERVICE_KAFKA_GROUP_ID=${{ secrets.NOTIFICATION_SERVICE_KAFKA_GROUP_ID }} \
               KAFKA_BOOTSTRAP_SERVER=${{ secrets.KAFKA_BOOTSTRAP_SERVER }} \
@@ -182,8 +181,8 @@ jobs:
               smtp_server=${{ secrets.SMTP_SERVER }} \
               smtp_port=${{ secrets.SMTP_PORT }} \
               smtp_email=${{ secrets.SMTP_EMAIL }} \
-              SMTP_PASSWORD=${{ secrets.SMTP_EMAIL }} \
-              smtp_username=${{ secrets.SMTP_USERNAME }} \
+              SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} \
+              smtp_username=${{ secrets.SMTP_USERNAME }} 
             
       # Configure CORS for the inventory service
       - name: Configure CORS for Notification Service
